# pixels-gate

./: .gitignore  CMakeLists.txt  PixelsGate.data  PixelsGate.js  PixelsGate.wasm  README.md  analyze_tile.py  build.sh  diamond_editor.py  generate_assets.py  generate_camp_assets.py  generate_knight.py  generate_missing_assets.py  generate_npc_sprites.py  generate_ui_assets.py  index.html  inspect_save.py  tile_namer.py
.github/workflows/: deploy_web.yml
assets/Pixel Art Top Down - Basic v1.2.2/: Changelog.txt
src/: main.cpp
src/engine/: AnimationSystem.h  Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  Camera.h  Components.h  Config.cpp  Config.h  Dice.h  ECS.h  Input.cpp  Input.h  Inventory.h  Pathfinding.h  SaveSystem.h  TextRenderer.cpp  TextRenderer.h  Texture.cpp  Texture.h  TextureManager.cpp  TextureManager.h  Tilemap.cpp  Tilemap.h  Tiles.h  UIComponents.h
src/game/: GameComponents.h  PG_Combat.cpp  PG_Input.cpp  PG_Systems.cpp  PG_UI.cpp  PG_World.cpp  PixelsGateGame.cpp  PixelsGateGame.h
tests/: TestGameComponents.cpp
